--- a/src/main.css
+++ b/src/main.css
@@ -82,7 +82,14 @@
     @apply focus:ring-2 ring-offset-2 ring-indigo-500/60 transition-all;
 
 }
+/* material Class*/
 
+.material{
+    @apply shadow-sm shadow-black/40 uppercase relative before:absolute 
+    before:w-full before:h-full before:inset-0 before:bg-white/20 before:scale-0
+    hover:before:scale-100 before:transition-all before:rounded-full
+    hover:before:rounded-none
+}
 
 
 
