--- a/src/main.css
+++ b/src/main.css
@@ -91,6 +91,57 @@
     hover:before:rounded-none
 }
 
+/* sweet buttons*/
+
+.sweet-primary {
+    @apply bg-transparent text-black border-[3px] border-black relative 
+    before:absolute before:w-full before:h-full before:bottom-2 before:right-2
+     before:bg-blue-500 before:-z-10 hover:before:bottom-0 hover:before:right-0
+     before:transition-all hover:text-white duration-500 hover:border-blue-300
+}
+.sweet-dark {
+    @apply bg-transparent text-white border-[3px] border-black relative 
+    before:absolute before:w-full before:h-full before:bottom-2 before:right-2 
+    before:bg-black before:-z-10 hover:before:bottom-0 hover:before:right-0 
+    before:transition-all hover:text-white duration-500 hover:border-black/70
+
+}
+.sweet-warning {
+    @apply bg-transparent text-black border-[3px] border-black relative
+     before:absolute before:w-full before:h-full before:bottom-2 before:right-2
+      before:bg-orange-400 before:-z-10 hover:before:bottom-0 hover:before:right-0 
+      before:transition-all hover:text-white duration-500 hover:border-orange-300
+}
+
+.sweet-success {
+    @apply bg-transparent text-black border-[3px] border-black relative 
+    before:absolute before:w-full before:h-full before:bottom-2 before:right-2 
+    before:bg-green-600 before:-z-10 hover:before:bottom-0 hover:before:right-0
+     before:transition-all hover:text-white duration-500 hover:border-green-300
+}
+
+.sweet-danger {
+
+    @apply bg-transparent text-black border-[3px] border-black relative 
+    before:absolute before:w-full before:h-full before:bottom-2 before:right-2
+    before:bg-red-500 before:-z-10 hover:before:bottom-0 hover:before:right-0 
+    before:transition-all  hover:text-white duration-500 hover:border-red-300
+}
+.sweet-indigo {
+
+    @apply bg-transparent text-black border-[3px] border-black relative 
+    before:absolute before:w-full before:h-full before:bottom-2 before:right-2 
+    before:bg-blue-500 before:-z-10 hover:before:bottom-0 hover:before:right-0
+     before:transition-all hover:text-white duration-500 hover:border-blue-300
+}
+
+    .sweet-purple{
+
+    @apply bg-transparent text-black border-[3px] border-black relative
+    before:absolute before:w-full before:h-full before:bottom-2 before:right-2
+    before:bg-purple-500 before:-z-10 hover:before:bottom-0 hover:before:right-0 
+    before:transition-all hover:text-white duration-500 hover:border-purple-300
+}
 
 
 }
