--- a/src/main.css
+++ b/src/main.css
@@ -175,4 +175,35 @@
     @apply bg-transparent border-[1.5px] border-indigo-500 text-indigo-500;
 }
 
+/* smart buttons*/
+.smart-primary {
+
+    @apply bg-blue-100 text-blue-700;
+}
+.smart-dark {
+@apply bg-gray-100 text-gray-700;
+
+}
+.smart-warning {
+@apply bg-orange-100 text-orange-700;
+
+}
+.smart-success {
+@apply bg-green-100 text-green-700;
+
+}
+.smart-purple {
+@apply bg-purple-100 text-purple-700;
+}
+
+.smart-danger {
+@apply bg-red-100 text-red-700;
+}
+.smart-indigo {
+@apply bg-indigo-100 text-indigo-700;
+
+}
+
+
+
 }
