--- a/src/main.css
+++ b/src/main.css
@@ -4,23 +4,22 @@
 
 @layer components{
     .btn {
-        @apply inline-block text-white text-sm font-medium px-5 py-2 cursor-pointer border-0
-        capitalize;
+        @apply inline-block text-white text-sm font-medium px-5 py-2 cursor-pointer border-0 capitalize;
     }
     .btn-primary{
-        @apply bg-blue-500
+        @apply bg-blue-500;
     }
     .btn-dark{
         @apply bg-black;
     }
     .btn-warning{
-        @apply bg-orange-400
+        @apply bg-orange-400;
     }
     .btn-success{
-        @apply bg-green-600
+        @apply bg-green-600;
     }
     .btn-danger{
-        @apply bg-red-500
+        @apply bg-red-500;
     }
     .btn-indigo {
     @apply bg-indigo-500;
@@ -30,28 +29,33 @@
     }
 
     /* Shadow buttons */
+
     .primary-shadow {
-        @apply shadow-lg shadow-blue-500/40;
+
+        @apply shadow-lg shadow-blue-500/50;
     }
     .dark-shadow {
-    @apply shadow-lg shadow-black/40;
+
+         @apply shadow-lg shadow-black/40;
     }
     .warning-shadow {
-        @apply shadow-lg shadow-orange-400/40
+
+        @apply shadow-lg shadow-orange-400/40;
     }
     .success-shadow {
-    @apply shadow-lg shadow-green-500/40
+
+        @apply shadow-lg shadow-green-500/40;
     }
     .danger-shadow{
 
-        @apply shadow-lg shadow-red-500/40
+        @apply shadow-lg shadow-red-500/40;
     }
-.purple-shadow {
+    .purple-shadow {
 
-    @apply shadow-lg shadow-purple-500/40
+     @apply shadow-lg shadow-purple-500/40;
 }
-.indigo-shadow {
-    @apply shadow-lg shadow-blue-500/40
+    .indigo-shadow {
+      @apply shadow-lg shadow-blue-500/40;
 }
 
 /* ring classes */
@@ -85,15 +89,14 @@
 /* material Class*/
 
 .material{
-    @apply shadow-sm shadow-black/40 uppercase relative before:absolute 
-    before:w-full before:h-full before:inset-0 before:bg-white/20 before:scale-0
-    hover:before:scale-100 before:transition-all before:rounded-full
-    hover:before:rounded-none
+
+    @apply shadow-sm shadow-black/40 uppercase relative before:absolute before:w-full before:h-full before:inset-0 
+    before:bg-white/20 before:scale-0 hover:before:scale-100 before:transition-all before:rounded-full hover:before:rounded-none;
 }
 
 /* sweet buttons*/
 
-.sweet-primary {
+/* .sweet-primary {
     @apply bg-transparent text-black border-[3px] hover:bg-blue-500 border-black relative 
     before:absolute before:w-full before:h-full before:bottom-2 before:right-2
      before:bg-blue-500 before:-z-10 hover:before:bottom-0 hover:before:right-0
@@ -150,7 +153,7 @@
     before:absolute before:w-full before:h-full before:bottom-2 before:right-2
     before:bg-purple-500 before:-z-10 hover:before:bottom-0 hover:before:right-0 
     before:transition-all hover:text-white duration-500 hover:border-purple-300
-}
+} */
 /* Outline buttons*/
 .outline-primary {
     @apply bg-transparent border-[1.5px] border-blue-500 text-blue-500;
@@ -242,7 +245,6 @@
 .gradient-indigo {
 @apply bg-gradient-to-r from-indigo-500 to-indigo-100;
 }
-
 
 
 }
