--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer components{
+    .buttons-container > button , a, input[type="submit"]{
+        @apply mt-3 md:mt-0
+
+    }
     .btn {
         @apply inline-block text-white text-sm font-medium px-5 py-2 cursor-pointer border-0 capitalize;
     }
@@ -255,9 +259,13 @@
     
     }
  
+
+
+
     /*Block buttons*/
  
-.btn-block{
+.btn-block {
+
     @apply block w-full  text-base py-3;
     
     }
