--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,6 @@
 @import  "tailwindcss/base";
 @import "tailwindcss/components";
 @import "./components/buttons.css";
+@import "./components/alerts.css";
 @import "tailwindcss/utilities";
 
