--- a/src/components/alerts.css
+++ b/src/components/alerts.css
@@ -7,3 +7,12 @@
 .alert-success{
     @apply bg-green-100 text-green-700 border border-green-200
 }
+.alert-danger{
+    @apply bg-red-100 text-red-700 border border-red-200
+}
+.alert-warning{
+    @apply bg-orange-100 text-orange-700 border
+}
+.alert-primary{
+    @apply bg-blue-100 text-blue-700 border border-blue-200
+}
