--- a/src/components/alerts.css
+++ b/src/components/alerts.css
@@ -1,5 +1,5 @@
 .alert {
-    @apply pl-[15px] pr-[40px] py-[14px] relative;
+    @apply pl-[15px] pr-[40px] py-[14px] relative transition-all
 }
 .alert span {
     @apply capitalize font-semibold text-base;
