--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,9 +1,33 @@
-.header-cusomter-img{
-    @apply w-full h-full object-cover rounded-full;
-}
+
 .header-list-msg{
     @apply ml-3 text-xs sm:text-sm font-medium text-orange-800;
 }
+.right-col {
+    @apply hidden lg:block lg:w-6/12
+}
+.header-image {
+    @apply w-full h-auto object-cover;
+}
+.logo {
+    @apply absolute top-6 left-6 w-auto h-[40px]
+}
 
-
+.header-paragraph{
+    @apply mt-5 text-base text-gray-500
+}
+.header-customers-ul {
+    @apply flex items-center mt-5
+}
+.header-customers-li{
+    @apply block w-[40px] h-[40px] overflow-hidden rounded-full border-[3.5px] 
+}
+.header-cusomter-img{
+    @apply w-full h-full object-cover rounded-full;
+}
+.header-list-msg {
+    @apply ml-3 text-xs sm:text-sm font-medium text-orange-800
+}
+.right-col {
+    @apply hidden lg:block lg:w-6/12
+}
 
