--- a/src/styles/helper.css
+++ b/src/styles/helper.css
@@ -10,3 +10,7 @@
     @apply w-full h-full object-cover 
 }
 
+.heading {
+    @apply text-lg uppercase text-orange-500 font-medium mb-5 underline decoration-orange-500 decoration-wavy decoration-2 underline-offset-[5px]; 
+}
+
