--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,18 +1,16 @@
 .nav {
-    @apply fixed top-0 -right-full w-full h-full bg-black/40 transition-all
+    @apply fixed top-0 -right-full w-full h-full bg-black/40 transition-all duration-200 z-30
 }
 
 .nav-container{
-    @apply absolute top-0 right-0 w-full sm:w-6/12 lg:w-4/12 xl:w-3/12 h-full bg-orange-50 flex
-    items-center;
+    @apply absolute top-0 right-0 w-full sm:w-6/12 lg:w-4/12 xl:w-3/12 h-full bg-orange-50 flex items-center;
 }
 
 .nav-ul{
     @apply w-full;
 }
 .nav-link{
-    @apply block px-4 py-3 w-full text-orange-800 capitalize text-base hover:bg-orange-700
-    hover:text-white hover:pl-6 transition-all duration-300
+    @apply block px-4 py-3 w-full text-orange-800 capitalize text-base hover:bg-orange-700 hover:text-white hover:pl-6 transition-all duration-300
 }
 
 .nav-close {
