--- a/src/styles/category.css
+++ b/src/styles/category.css
@@ -1,7 +1,9 @@
 .category {
     @apply my-10 sm:my-20; 
 }
-
+.category-column {
+    @apply w-full sm:w-6/12 md:w-4/12 lg:w-3/12 xl:w-[20%] p-3;
+}
 .category-block {
     @apply block w-full h-[140px] sm:h-[120px] overflow-hidden rounded-md relative before:absolute before:inset-0 before:w-full before:h-full before:bg-orange-500 before:z-10 before:scale-0 hover:before:scale-150 before:transition-all before:duration-700 before:rounded-full  hover:before:rounded-none before:origin-top-right;
 }
