style pricing card

--- a/src/main.css
+++ b/src/main.css
@@ -6,6 +6,7 @@
 @import "./styles/nav.css";
 @import "./styles/header.css";
 @import "./styles/helper.css";
-@import "./styles/category.css"
+@import "./styles/category.css";
+@import "./styles/pricing.css"
 
 
